REGRESSION (r161195): Acid2 regression tests frequently fail https://bugs.webkit.org/show_bug.cgi?id=126432

Source/WebCore:

Reviewed by Anders Carlsson.

We would occasionally dump the render tree before the actual last resource on the page was loaded.
The problematic resource is an image loaded by an <object> tag nested as fallback of another <object>.

* html/HTMLObjectElement.cpp:
(WebCore::HTMLObjectElement::renderFallbackContent):

    Force style recalc when rendering fallback content. The current mechanism for triggering the fallback content load
    requires a style recalc.

LayoutTests:

Reviewed by Anders Carlsson.

* TestExpectations: acid2 is no longer flaky.
* fast/overflow/overflow-height-float-not-removed-crash3-expected.txt: whitespace change.



Canonical link: https://commits.webkit.org/144520@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161484 268f45cc-cd09-0410-ab3c-d52691b4dbfc